templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-sonatype-nexus3
  namespace: nexus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: nexus.pocdevops.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexus-sonatype-nexus3
            port:
              number: 8081
